kubernetes/kustomize/nscale/overlays/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nscale
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    nginx.ingress.kubernetes.io/session-cookie-name: "XtConLoadBalancerSession"
    nginx.ingress.kubernetes.io/session-cookie-path: /nscale_web/
    nginx.ingress.kubernetes.io/session-cookie-expires: "28800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "28800"
    nginx.ingress.kubernetes.io/app-root: /nscale_web
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120" 
spec:
  ingressClassName: nginx
